--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-redux": "^8.1.3",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -43,5 +45,8 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://ChoiBoKeun1.github.io/react-practice"
+  "homepage": "https://ChoiBoKeun1.github.io/react-practice",
+  "devDependencies": {
+    "@reduxjs/toolkit": "^1.9.7"
+  }
 }
