--- a/package.json
+++ b/package.json
@@ -13,10 +13,16 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.14.15",
     "@mui/material": "^5.14.15",
+    "@tensorflow/tfjs": "^4.13.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "csvtojson": "^2.0.10",
+    "d3": "^7.8.5",
+    "danfojs": "^1.1.2",
+    "fraction": "^0.2.0",
     "gh-pages": "^6.0.0",
+    "mathjs": "^12.1.0",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -55,6 +61,7 @@
   },
   "homepage": "https://ChoiBoKeun1.github.io/react-practice",
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@reduxjs/toolkit": "^1.9.7",
     "autoprefixer": "^9.8.8",
     "css-loader": "^6.8.1",
