--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.14.15",
-    "@mui/material": "^5.14.15",
+    "@mui/material": "^5.14.18",
+    "@mui/x-data-grid": "^6.18.1",
     "@tensorflow/tfjs": "^4.13.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "chart.js": "^4.4.0",
     "csvtojson": "^2.0.10",
     "d3": "^7.8.5",
     "danfojs": "^1.1.2",
@@ -25,6 +27,7 @@
     "mathjs": "^12.1.0",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.3",
