--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "spa",
   "version": "0.1.0",
-  "private": true,
   "dependencies": {
     "@craco/craco": "^7.1.0",
     "@emotion/react": "^11.11.1",
@@ -19,6 +18,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^4.4.0",
+    "chartjs-plugin-autocolors": "^0.2.2",
     "csvtojson": "^2.0.10",
     "d3": "^7.8.5",
     "danfojs": "^1.1.2",
