--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-icons": "^4.11.0",
     "react-markdown": "^9.0.1",
     "react-redux": "^8.1.3",
+    "react-resizable": "^3.0.5",
     "react-router-dom": "^6.18.0",
     "react-scripts": "^5.0.1",
     "redux": "^4.2.1",
