--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^4.4.0",
     "chartjs-plugin-autocolors": "^0.2.2",
+    "chartjs-plugin-zoom": "^2.0.1",
     "csvtojson": "^2.0.10",
     "d3": "^7.8.5",
     "danfojs": "^1.1.2",
